objects/Cadence_Online_Service_Log__c.object
<CustomObject>
    <description>This Object will be a child object of Contact. While users try to register themselves to an application multiple web-service callouts will take place. This object will store any callout exception. SFDC admin will be able to process those pending actions. Also it will capture login detail and scheduler error log.</description>
    <fields>
        <fullName>Application_Code__c</fullName>
        <label>Application Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Load_Id__c</fullName>
        <label>Batch Load Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Password_Initiated_By__c</fullName>
        <formula>if( CreatedBy.Profile.Name == &apos;UnifiedSSO Profile&apos;,(Related_User__r.FirstName + &apos; &apos; + Related_User__r.LastName),
(CreatedBy.FirstName + &apos; &apos; +CreatedBy.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Password Initiated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interim_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interim Registration</label>
        <referenceTo>Interim_Registration__c</referenceTo>
        <relationshipLabel>Cadence Online Service Logs</relationshipLabel>
        <relationshipName>Cadence_Online_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Login_IP_address__c</fullName>
        <label>Login IP address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Status__c</fullName>
        <label>Operation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operation_Time__c</fullName>
        <label>Operation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Detail__c</fullName>
        <label>Process Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_User_Email__c</fullName>
        <formula>Related_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cadence Online Service Logs (Related User)</relationshipLabel>
        <relationshipName>Cadence_Online_Service_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>Browser Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WebService_Callout_Request_Body__c</fullName>
        <label>WebService Callout Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WebService_Callout_Request__c</fullName>
        <label>WebService Callout Request</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Method__c</fullName>
        <label>Webservice Callout Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Request_Header1_Name__c</fullName>
        <label>Webservice Callout Request Header1 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Request_Header1_Value__c</fullName>
        <label>Webservice Callout Request Header1 Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Request_Header2_Name__c</fullName>
        <label>Webservice Callout Request Header2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Request_Header2_Value__c</fullName>
        <label>Webservice Callout Request Header2 Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Cadence Online Service Log</label>
    <nameField>
        <label>Cadence Online Service Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadence Online Service Logs</pluralLabel>
    <recordTypes>
        <fullName>Batch</fullName>
        <active>true</active>
        <description>Batch Process</description>
        <label>Batch</label>
    </recordTypes>
    <recordTypes>
        <fullName>DML_Exception</fullName>
        <active>true</active>
        <label>DML Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>Login</fullName>
        <active>true</active>
        <description>Cadence User Login</description>
        <label>Login</label>
    </recordTypes>
    <recordTypes>
        <fullName>Okta_Operation</fullName>
        <active>true</active>
        <label>Okta Operation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registration</fullName>
        <active>true</active>
        <description>Cadence User Registration</description>
        <label>Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scheduler</fullName>
        <active>true</active>
        <description>Scheduler</description>
        <label>Scheduler</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>